--- a/Kyoku/core/presentation/designsystem/src/main/res/drawable/ic_pin.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/drawable/ic_pin.xml
@@ -1,9 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="960"
-    android:viewportHeight="960">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M640,200v280l68,68q6,6 9,13.5t3,15.5v23q0,17 -11.5,28.5T680,640L520,640v223q0,8 -3,15.5T508,892l-14,14q-6,6 -14,6t-14,-6l-14,-14q-6,-6 -9,-13.5T440,863v-223L280,640q-17,0 -28.5,-11.5T240,600v-23q0,-8 3,-15.5t9,-13.5l68,-68v-280q-17,0 -28.5,-11.5T280,160q0,-17 11.5,-28.5T320,120h320q17,0 28.5,11.5T680,160q0,17 -11.5,28.5T640,200Z" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
+      
+    <path android:fillColor="@android:color/white" android:fillType="evenOdd" android:pathData="M19,12.87c0,-0.47 -0.34,-0.85 -0.8,-0.98C16.93,11.54 16,10.38 16,9V4l1,0c0.55,0 1,-0.45 1,-1c0,-0.55 -0.45,-1 -1,-1H7C6.45,2 6,2.45 6,3c0,0.55 0.45,1 1,1l1,0v5c0,1.38 -0.93,2.54 -2.2,2.89C5.34,12.02 5,12.4 5,12.87V13c0,0.55 0.45,1 1,1h4.98L11,21c0,0.55 0.45,1 1,1c0.55,0 1,-0.45 1,-1l-0.02,-7H18c0.55,0 1,-0.45 1,-1V12.87z"/>
+    
 </vector>
