--- a/Kyoku/core/presentation/designsystem/src/main/res/drawable/ic_app_logo_dark.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/drawable/ic_app_logo_dark.xml
@@ -4,36 +4,39 @@
     android:height="164dp"
     android:viewportWidth="164"
     android:viewportHeight="164">
-  <path
-      android:pathData="M16.95,70.69L70.69,16.95A16,16 0,0 1,93.31 16.95L147.05,70.69A16,16 0,0 1,147.05 93.31L93.31,147.05A16,16 49.93,0 1,70.69 147.05L16.95,93.31A16,16 62.41,0 1,16.95 70.69z">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:startX="43.82"
-          android:startY="43.82"
-          android:endX="120.18"
-          android:endY="120.18"
-          android:type="linear">
-        <item android:offset="0" android:color="#FF6A994E"/>
-        <item android:offset="1" android:color="#FF386641"/>
-      </gradient>
-    </aapt:attr>
-  </path>
-  <path
-      android:pathData="M72,54V111"
-      android:strokeWidth="8"
-      android:fillColor="#00000000"
-      android:strokeColor="#88AD99"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M72,84.19L97.12,56.98"
-      android:strokeWidth="8"
-      android:fillColor="#00000000"
-      android:strokeColor="#88AD99"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M71.84,84L99.22,108.93"
-      android:strokeWidth="8"
-      android:fillColor="#00000000"
-      android:strokeColor="#88AD99"
-      android:strokeLineCap="round"/>
+    <path android:pathData="M16.95,70.69L70.69,16.95A16,16 0,0 1,93.31 16.95L147.05,70.69A16,16 0,0 1,147.05 93.31L93.31,147.05A16,16 49.93,0 1,70.69 147.05L16.95,93.31A16,16 62.41,0 1,16.95 70.69z">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:startX="43.82"
+                android:startY="43.82"
+                android:endX="120.18"
+                android:endY="120.18"
+                android:type="linear">
+                <item
+                    android:offset="0"
+                    android:color="#FF6A994E" />
+                <item
+                    android:offset="1"
+                    android:color="#FF386641" />
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path
+        android:pathData="M72,54V111"
+        android:strokeWidth="8"
+        android:fillColor="#00000000"
+        android:strokeColor="#88AD99"
+        android:strokeLineCap="round" />
+    <path
+        android:pathData="M72,84.19L97.12,56.98"
+        android:strokeWidth="8"
+        android:fillColor="#00000000"
+        android:strokeColor="#88AD99"
+        android:strokeLineCap="round" />
+    <path
+        android:pathData="M71.84,84L99.22,108.93"
+        android:strokeWidth="8"
+        android:fillColor="#00000000"
+        android:strokeColor="#88AD99"
+        android:strokeLineCap="round" />
 </vector>
